[project]
name = "bench"
version = "0.1.0"
description = ""
authors = [
    {name = "Daekyeong Kim",email = "daekyeong.kim@rebellions.ai"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "pathvalidate (>=3.2.3,<4.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "datasets (>=3.5.0,<4.0.0)",
    "transformers (>=4.51.1,<5.0.0)",
    "vllm (>=0.8.3,<0.9.0)",
    "quart (>=0.20.0,<0.21.0)",
    "aiohttp (>=3.11.16,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
